# git-shear

./: .gitignore  .travis.yml  LICENSE  Main.hs  package.yaml  shear.cabal
src/: Main.hs
src/Shear/: Option.hs
