name:                shear
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Remove merged remote branches

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/LostProperty/shear

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Rob Berry

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          rob@lostpropertyhq.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable git-shear
  hs-source-dirs: src
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9, process, text, pretty, optparse-applicative

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010
